Misc. layout issues
Fix timing issue if stats event fires before dashboard has been created.

--- a/app/files/css/services.css
+++ b/app/files/css/services.css
@@ -10,6 +10,7 @@
 
 .service span.title {
   text-transform: uppercase;
+  font-size: 1.2em;
 }
 
 .service .ports {
