--- a/app/files/css/tasks.css
+++ b/app/files/css/tasks.css
@@ -16,8 +16,6 @@
 }
 
 .tasks {
-  margin-left: 1em;
-  margin-top: 2em;
 }
 
 span.task {
